--- a/BusTicketReservationSystem/src/main/resources/application.properties
+++ b/BusTicketReservationSystem/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-#changing the server port
-server.port=8008
+
 
 #db specific properties
 
-spring.datasource.url=jdbc:mysql://localhost:3306/project
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:masaidb}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
 
 
 
